--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -67,6 +67,10 @@
             <artifactId>modelmapper</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
