bootstrap 의 refresh, health, beans 기능 사용

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -33,3 +33,8 @@ logging:
 #token:
 #  expiration_time: 86400000
 #  secret: user_token
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans
