Spring Cloud Bus 의존성 추가 및 설정

--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -3,8 +3,18 @@ server:
 spring:
   application:
     name: config-service
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
   cloud:
     config:
       server:
         git:
-          uri: file:///Users/noahkyu/IdeaProjects/microservices
+          uri: https://github.com/enjay27/trou-config.git
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, busrefresh
