비대칭 암호 키 사용

--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -1,2 +1,5 @@
 encrypt:
-  key: oQJXSDG8SNSeOYqvuoPjhg
+  key-store:
+    location: file://${user.home}/IdeaProjects/keystore/apiEncryptionKey.jks
+    password: test1234
+    alias: apiEncryptionKey
